Cambiado de sitio sombreado (#59)

--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -68,6 +68,8 @@
 
 \bibitem{Hart-1989} Hart, J., Sandin, D., Kauffman, L. (1989). Ray tracing deterministic 3-D fractals. \textit{ACM SIGGRAPH Computer Graphics}.vol 23. 289-296. \url{https://doi.org/10.1145/74334.74363} 
 
+\bibitem{shadows} Quilez, I. (s. f.-c). \textit{Soft shadows in ray-marched SDFs}. Íñigo Quilez. Recuperado 30 de mayo de 2022, de \url{https://iquilezles.org/articles/rmshadows/}
+
 \bibitem{3D-SDFs} Quilez, I. (s. f.). \textit{3D SDFs}. Íñigo Quilez. Recuperado 14 de mayo de 2022, de \url{https://iquilezles.org/articles/distfunctions/}
 
 \bibitem{quaternions} Conway, J. H., Smith, D. A. (2003). \textit{On quaternions and octonions}. 21. CRC Press LLC.
