--- a/memoria/tex/capitulos/capitulo-7.tex
+++ b/memoria/tex/capitulos/capitulo-7.tex
@@ -857,34 +857,62 @@ Al igual que en el caso de la componente difusa, el resultado final es la suma d
     I_s = \sum_{p=1}^k I_p k_s (\vec R_p \cdot \vec V)^n
 \end{equation}
 
-\subsection{Evaluación del modelo de iluminación}
+\subsection{Sombras arrojadas}
 
-Una vez se han explicado las tres componentes y cómo se calculan podemos evaluar el modelo de iluminación completo con solo sumar las tres intensidades calculadas.
-
-\begin{equation}
-    \label{eq:phong}
-    \begin{split}
-        I &= I_a + I_d + I_p \\
-        &=\frac{1}{k}\sum_{p=1}^k I_p k_a + \sum_{p=1}^{k}I_p k_d (\vec N\cdot \vec L_p) + \sum_{p=1}^{k} I_p k_s (\vec R_p\cdot \vec V)^n \\
-        &=\sum_{p=1}^{k}\left(\frac{1}{k}I_p k_a + I_p k_d (\vec N\cdot \vec L_p) +  I_p k_s (\vec R_p\cdot \vec V)^n\right)
-    \end{split}
-\end{equation}
-
-Sin embargo, hay algunas situaciones en las que las que no se aplica iluminación difusa ni especular, y es en el caso de que la luz no incida directamente sobre el punto. Esto se traduce en que el coseno del ángulo $\theta$ sea negativo, es decir, que $(\vec N\cdot \vec L_p)<0$. Al no existir luz incidente el material no puede irradiar ningún tipo de luz, pues no hay luz que incida, produciendo efectos de sombras, donde únicamente afecta la componente ambiental. Fíjese en la imagen \ref{fig:excepcion}
+Hay algunas situaciones en las que las que no se aplica iluminación difusa ni especular, y es en el caso de que la luz no incida directamente sobre el punto. Hay varias formas de saber si un punto concreto está o no en la sombra. Pensemos primero en puntos que están `en la cara oculta' de un objeto. Es decir, pertenecen a una zona de un objeto sobre la cual una fuente de luz concreta no incide. Para determinar esto se puede utilizar la normal a la superficie en dicho punto, $\vec N$, y el vector dirección de la fuente de luz, $\vec L_p$. Si el coseno del ángulo $\theta$, que recordemos que es el vector formado por $\vec N$ y $\vec L_p$, entonces consideramos que la luz no incide sobre el punto, véase la imagen \ref{fig:excepcion}.
 
 \begin{figure} [ht]
     \centering
     \includegraphics[scale = 0.25]{img/C7/excepcion.png}
-    \caption{Punto donde no se aplica componente difusa ni especular}
+    \caption{Punto sobre el que no incide la luz}
     \label{fig:excepcion}
 \end{figure}
+
+El problema que esta condición es suficiente únicamente en casos de objetos convexos, como las esferas, ya que si la superficie tiene puntos tapados por el propio objeto el cálculo afirmaría que la luz incide sobre el mismo cuando realmente no es así. Fíjese en el caso del tubo de la figura \ref{fig:no-convexo}.
+
+\begin{figure} [ht]
+    \centering
+    \includegraphics[scale = 0.25]{img/C7/no-convexo.png}
+    \caption{Ejemplo de objeto no convexo y punto a la sombra}
+    \label{fig:no-convexo}
+\end{figure}
+
+En estos casos, la forma de saber si el punto está o no a la sombra es lanzar un rayo en la misma dirección que la luz y averiguar si existe alguna intersección con algún objeto de la escena. En caso de que la haya multiplicamos por $0$ el valor de la componente difusa y la especular (el punto está a la sombra). Si no existe impacto se establece que la luz incide directamente sobre el punto y se multiplicarían por $1$ las componentes difusa y especular. Este proceso debe repetirse con cada una de las fuentes de luz que se utilicen.
+
+Por ejemplo, fíjese en la imagen \ref{fig:sombras}. Si se lanza un rayo desde el punto $p_0$, este no encontrará intersección con ningún objeto, por lo que se considera que la luz incide sobre él. Por su parte, $p_1$ está en la parte del objeto sobre la cual no impacta la luz, y si además lanzamos un rayo en dirección a la fuente de luz intersecaría con la propia esfera. Y finalmente, al lanzar un rayo desde $p_2$ éste interseca con la esfera, por lo que se considera que está a la sombra.
+
+\begin{figure} [ht]
+    \centering
+    \includegraphics[scale = 0.3]{img/C7/sombras.png}
+    \caption{Ejemplos de puntos sobre los que incide y no una fuente de luz}
+    \label{fig:sombras}
+\end{figure}
+
+Por cualquiera de las dos razones, un punto puede ocurrir que esté a la sombra, en cuyo caso no se calcularían o se anularían las componentes difusa y especular del modelo. Por tanto, las intensidades difusa y especular se redefinen multiplicando cada una de las dos por una constante binaria para cara luz $c_p$, la cual vale $0$ si el punto evaluado está a la sombra o $1$ si la luz incide sobre el mismo.
+
+\begin{align*}
+    I_{d_p} &= c_p I_p k_d (\vec N\cdot \vec L_p)  & I_d &= \sum_{p=1}^k I_p k_d (\vec N\cdot \vec L_p)\\
+    I_{s_p} &= c_p I_p k_s (\vec R_p\cdot \vec V)^n & I_s &= \sum_{p=1}^k I_p k_s (\vec R_p \cdot \vec V)^n
+\end{align*}
+
+\subsection{Evaluación del modelo de iluminación}
+
+Una vez se han explicado las tres componentes y cómo se calculan podemos evaluar el modelo de iluminación completo sumando las tres componentes.
+\begin{equation}
+    \label{eq:phong}
+    \begin{split}
+        I &= I_a + I_d + I_p \\
+        &=\frac{1}{k}\sum_{p=1}^k I_p k_a + \sum_{p=1}^{k}c_p I_p k_d (\vec N\cdot \vec L_p) + \sum_{p=1}^{k} c_p  I_p k_s (\vec R_p\cdot \vec V)^n \\
+        &=\sum_{p=1}^{k}\left(\frac{1}{k}I_p k_a + c_p I_p k_d (\vec N\cdot \vec L_p) + c_p I_p k_s (\vec R_p\cdot \vec V)^n\right)
+    \end{split}
+\end{equation}
 
 A modo de adelanto, pero también con el objetivo de aclarar conceptos, obsérvese cómo afecta cada componente del modelo. En las imágenes \ref{fig:componentes-aisladas} vemos el efecto de cada tipo de iluminación por separado. En la imagen (a) observamos en rojo que el efecto de la parte ambiental afecta por igual a todos los puntos, de forma que realmente no da ninguna sensación de volumen. En (b) se puede ver cómo la componente difusa colorea de forma mate en color verde el objeto. Por último, en (c) se observan únicamente brillos especulares azules.
 
 \begin{figure}[ht]
     \centering
     \begin{tabular}{ccc}
-      \includegraphics[scale=0.13]{img/C7/solo-ambiental.png} &   \includegraphics[scale=0.13]{img/C7/solo-difusa.png} &   \includegraphics[scale=0.13]{img/C7/solo-especular.png} \\
+      \includegraphics[scale=0.12]{img/C7/solo-ambiental.png} &   \includegraphics[scale=0.12]{img/C7/solo-difusa.png} &   \includegraphics[scale=0.12]{img/C7/solo-especular.png} \\
     (a) Ambiental & (b) Difusa & (c) Especular \\[6pt]
     \end{tabular}
     \caption{Componentes aisladas del modelo de Phong}
@@ -923,49 +951,69 @@ struct Material {
 
 Como ya hemos comentado, cada objeto tiene un único material, por lo que añadimos a las estructuras \verb|Sphere| y \verb|Plane| un nuevo campo \verb|Material mat;| de forma que a cada esfera y al plano se le puede asignar un material. Además, en caso de intersección almacenábamos información en una estructura \verb|Hit_record|, y esa información es la que nos servía para calcular el color. De igual manera que necesitábamos por ejemplo la normal ahora necesitamos saber el material del objeto con el que impacta el rayo, por lo que añadimos a \verb|Hit_record| también un campo \verb|Material mat;| al cual se le asignaría el material del objeto con el que se produce el choque.
 
-Con estas variaciones ya podríamos implementar una función que evalue el modelo de iluminación completo a partir de la ecuación (\ref{eq:phong}). Esta función necesita como argumentos las fuentes de luz, el material, el punto en el que se evalúa el modelo, la normal a la superficie en dicho punto y el foco de la proyección. Toda esta información puede ser recogida en un array de objetos \verb|Directional_light|, en la estructura \verb|Hit_record| que almacena la información del choque y en la variable global \verb|u_lookfrom|. Presentamos por tanto el código de dicha función.
+Necesitamos ahora una función que, dado un punto, trace un rayo en dirección de una fuente de luz dada y devuelva 0 si hay intersección con algún objeto y 1 si no la hay. Fijémonos que debemos calcular intersecciones que estén a una pequeña distancia del punto, ya que en otro caso las funciones que calculan la intersección siempre calcularían que existe impacto (pues el punto que se evalúa está en una superficie), de forma que todos los puntos estarían a la sombra, cosa que no tiene sentido. Además, consideramos que solo las esferas arrojan sombras.
+
+\begin{lstlisting}
+float light_is_visible(Directional_light light, vec3 p, 
+    Sphere world[ARRAY_TAM], int size) {
+    Ray R;
+    R.dir = normalize(light.dir);
+    R.orig = p;
+    float t = 0.01;
+    float h;
+
+    return hit_spheres_list(world, size, R, t, MAX_DIST).hit ? 
+           0.0 : 1.0; 
+}
+\end{lstlisting}
+
+Además, con el objetivo de añadir eficiencia e interactividad se ha añadido una variable \verb|uniform| de tipo \verb|bvec3|, es decir, una tripleta de booleanos, que sirve para especificar desde JavaScript qué luces queremos que proyecten sombras. Así podemos proyectar las sombras de la luz que queramos cuando busquemos realismo o desactivarlas cuando queramos mayor rapidez en la ejecución, bajo la limitación de que solo podremos utilizar hasta 3 fuentes de luz.
+
+\begin{lstlisting}
+uniform bvec3 u_shadows;
+\end{lstlisting}
+
+Con estas variaciones ya podríamos implementar una función que evalue el modelo de iluminación completo a partir de la ecuación (\ref{eq:phong}). Esta función necesita como argumentos las fuentes de luz, el material, el punto en el que se evalúa el modelo, la normal a la superficie en dicho punto, los objetos que arrojan sombras y el punto de vista. Toda esta información puede ser recogida en un array de objetos \verb|Directional_light|, en la estructura \verb|Hit_record| que almacena la información del choque, en la variable global \verb|u_lookfrom| y el vector de esferas. Presentamos por tanto el código de dicha función.
 
 \begin{lstlisting}
 vec4 evaluate_lighting_model( 
-    Directional_light lights[ARRAY_TAM], 
-    int num_lights, Hit_record hr ) {
-
-    vec4 color_average = vec4(0.0, 0.0, 0.0, 1.0);
-    Material mat = hr.mat;  // Material
+    Directional_light lights[ARRAY_TAM], int num_lights, 
+    Hit_record hr,
+    Sphere world[ARRAY_TAM], int size ) {
+    
+    Material mat = hr.mat;
     Directional_light light;
     vec3 light_dir;
-    vec3 view_dir = normalize(u_lookfrom - hr.p); // V
-    vec3 normal = normalize(hr.normal); // N
-
+    vec3 view_dir = normalize(u_lookfrom - hr.p);
+    vec3 normal = normalize(hr.normal);
     vec4 ambient, diffuse, specular;
-    ambient = vec4(0.0, 0.0, 0.0, 1.0);
-    diffuse = vec4(0.0, 0.0, 0.0, 1.0);
-    specular = vec4(0.0, 0.0, 0.0, 1.0);
-
+    float visibility;
+    vec4 L_in = vec4(0.0, 0.0, 0.0, 1.0);
     if(num_lights > 0){
         for(int i = 0; i < ARRAY_TAM; i++){
             if(i == num_lights) break;
+            ambient = vec4(0.0, 0.0, 0.0, 1.0);
+            diffuse = vec4(0.0, 0.0, 0.0, 1.0);
+            specular = vec4(0.0, 0.0, 0.0, 1.0);
             light = lights[i];
-            color_average += light.color; // Suma de las intensidades
-            light_dir = normalize(light.dir); // L_p
-            float cos_theta = max(0.0, dot(normal, light_dir));
-            
-            // Solo si la luz es visible desde ese punto
-            if(cos_theta > 0.0) {
-                // R_p
-                vec3 reflection_dir = 
-                    reflect(-light_dir, normal);
-
-                diffuse += mat.kd * light.color * cos_theta;
-                specular += mat.ks * light.color * pow( 
-                    max(0.0, dot(reflection_dir, view_dir)), 
-                    mat.sh);
+            ambient += mat.ka*light.color;
+            if(!u_shadows[i]) visibility = 1.0;
+            else 
+                visibility = light_is_visible(light, hr.p, world, size);
+            light_dir = normalize(light.dir);
+            float cos_theta = max(0.0,dot(normal,light_dir));
+            // Only if light is visible from surface point
+            if(cos_theta > 0 && visibility > 0.0) {
+                // Reflection direction
+                vec3 reflection_dir = reflect(-light_dir, normal);
+                diffuse = mat.kd * cos_theta;
+                specular = mat.ks * pow( max(0.0, dot(reflection_dir, view_dir)), mat.sh);
             }
+            L_in += visibility * light.color * (diffuse + specular);
         }
-        color_average /= float(num_lights);
-        ambient = mat.ka * color_average;
     }
-    return ambient + diffuse + specular;
+    L_in += ambient/float(num_lights);
+    return vec4(L_in.xyz, 1.0);
 }
 \end{lstlisting}
 
@@ -983,7 +1031,7 @@ vec4 ray_color(Ray r, Sphere world[ARRAY_TAM], int size,
     if(hr.hit){
         // ... 
         tmp_color = evaluate_lighting_model(lights, 
-            num_lights, hr);
+            num_lights, hr, world, size);
     }
 
     // r hits the plane? 
@@ -998,13 +1046,13 @@ vec4 ray_color(Ray r, Sphere world[ARRAY_TAM], int size,
         else
             hr.mat.kd = vec4(0.0,0.0,0.0, 1.0);
         tmp_color = evaluate_lighting_model(lights, 
-            num_lights, hr);
+            num_lights, hr, world, size);
     }
     // ...
 }
 \end{lstlisting}
 
-Y ya por último tan solo tenemos que inicializar las luces y los materiales. En nuestros ejemplos estamos utilizando una luz blanca cuya dirección es $(1,1,1)$ y una luz azul cuya dirección es $(-1,-1,0)$. Respecto a los materiales, el del plano únicamente tiene la componente especular que se le asigna en \verb|ray_color| y el de las esferas es editable por el usuario, de forma que tenemos 4 variables \verb|uniform| que son editables dinámicamente y a partir de las cuales se inicializa el material de las esferas.
+Y ya por último tan solo tenemos que inicializar las luces y los materiales. En el caso de las luces, hemos utilizado dos fuentes de luz y hemo añadido dos variables \verb|uniform| para elegir los colores de ambas, aunque inicialmente serán blancas. Las direcciones de estas luces son $(1,1,0)$ y $(0,1,0)$. Respecto a los materiales, el del plano únicamente tiene la componente especular que se le asigna en \verb|ray_color| y el de las esferas es editable por el usuario, de forma que tenemos 4 variables \verb|uniform| que son editables dinámicamente y a partir de las cuales se inicializa el material de las esferas.
 
 \begin{lstlisting}
 // Material parametrizable
@@ -1012,6 +1060,9 @@ uniform vec4 u_ka;
 uniform vec4 u_kd;
 uniform vec4 u_ks;
 uniform float u_sh;
+// Colores de las luces
+uniform vec4 u_lightColor0;
+uniform vec4 u_lightColor1;
 
 // ... 
 
@@ -1040,11 +1091,11 @@ P.mat = ground_material;
 // Lights
 Directional_light lights[ARRAY_TAM];
 int num_lights = 2;
-Directional_light l1, l2;
-l1.color = vec4(1.0, 1.0, 1.0, 1.0); 
-l2.color = vec4(0.0, 0.0, 1.0, 1.0);
-l1.dir = vec3(1.0, 1.0, 1.0);
-l2.dir = vec3(-1.0, -1.0, 0.0);
+Directional_light l0, l1;
+l0.color = u_lightColor0; 
+l1.color = u_lightColor1;
+l0.dir = vec3(1.0, 1.0, 0.0);
+l1.dir = vec3(0.0, 1.0, 0.0);
 lights[0] = l1; lights[1] = l2;
 // ... 
 
@@ -1052,7 +1103,7 @@ gl_FragColor = ray_color(r, world, num_spheres,
     P, lights, num_lights);
 \end{lstlisting}
 
-Evidentemente todos estos parámetros se pueden modificar y poner los que queramos, para finalmente obtener las imágenes y la coloración que deseemos. Como ejemplos tenemos las imágenes que se han presentado al inicio de esta sección, aunque para terminar esta exposición y este capítulo mostraremos una última imagen que resume todo lo desarrollado: Ray-Tracing, intersecciones con distintos cuerpos, posicionamiento de cámara e iluminación.
+Evidentemente todos estos parámetros se pueden modificar y poner los que queramos, para finalmente obtener las imágenes y la coloración que deseemos.
 
 \begin{figure} [ht]
     \centering
@@ -1060,4 +1111,13 @@ Evidentemente todos estos parámetros se pueden modificar y poner los que queram
     \caption{Imagen final del capítulo \ref{chap:ray-tracing}}
     \label{fig:imagen-final}
 \end{figure}
+
+\begin{comment}
+
+
+Como ejemplos tenemos las imágenes que se han presentado al inicio de esta sección, aunque para terminar esta exposición y este capítulo mostraremos una última imagen que resume todo lo desarrollado: Ray-Tracing, intersecciones con distintos cuerpos, posicionamiento de cámara e iluminación.
+
+
+\end{comment}
+
 
