--- a/memoria/tex/capitulos/capitulo-7.tex
+++ b/memoria/tex/capitulos/capitulo-7.tex
@@ -152,7 +152,7 @@ Una vez conocemos las coordenadas de mundo de la esquina superior izquierda, la 
         (x,y) & \longmapsto \left(\frac{P_w\cdot x}{n_x},\frac{P_h\cdot y}{n_y},-1\right)
     \end{split}
 \end{equation}
-donde $(x,y)$ son las coordenadas de dispositivo en términos de píxeles a las que puede acceder el fragment shader a traves de \verb|gl_FragCoor|. Y así identificamos el alto y ancho del canvas con el alto y ancho del plano de proyección, de manera que a partir de estos valores y conociendo qué punto se sitúa en la esquina inferior izquierda podemos definitivamente calcular con qué punto del plano de proyección ($P$) identificamos el píxel:
+donde $(x,y)$ son las coordenadas de dispositivo en términos de píxeles a las que puede acceder el fragment shader a traves de \verb|gl_FragCoor|, a las cuales recordamos que se les suele añadir $\frac{1}{2}$ en cada componente para así hacer la identificación con el punto que se encuentra en el centro del píxel, y no la esquina inferior izquierda. Así identificamos el alto y ancho del canvas con el alto y ancho del plano de proyección, de manera que a partir de estos valores y conociendo qué punto se sitúa en la esquina inferior izquierda podemos definitivamente calcular con qué punto del plano de proyección ($P$) identificamos el píxel:
 \begin{equation}
     \label{eq:transformacion-lineal-5}
     \begin{split}
@@ -211,7 +211,7 @@ float image_width = 1280.0;
 float image_height = image_width / aspect_ratio;
 
 // Coordenadas de dispositivo normalizadas [0,1]
-vec2 uv = gl_FragCoord.xy / vec2(image_width, image_height); 
+vec2 uv = (gl_FragCoord.xy + vec2(0.5)) / vec2(image_width, image_height);
 float u = uv.x;
 float v = uv.y;
 
@@ -756,7 +756,7 @@ Camera cam = init_camera(u_lookfrom, u_lookat,
     vup, vfov, aspect_ratio);
 
 // [0,1] normalized device coordinates
-vec2 uv = gl_FragCoord.xy / vec2(image_width, image_height);
+vec2 uv = (gl_FragCoord.xy + vec2(0.5)) / vec2(image_width, image_height);
 float u = uv.x;
 float v = uv.y;
 
@@ -1108,16 +1108,126 @@ Evidentemente todos estos parámetros se pueden modificar y poner los que queram
 \begin{figure} [ht]
     \centering
     \includegraphics[scale = 0.28]{img/C7/phong-final.png}
+    \caption{Escena aplicando el modelo de Phong completo}
+    \label{fig:phong-final}
+\end{figure}
+
+\subsection{Multisampling Antiliasing}
+
+El \textit{antiliasing} es una técnica que nos permite suavizar los bordes en las imágenes presentadas por píxeles. Para ello, debemos implementar algunos métodos concretos para que la imagen se presente más real. Por ejemplo, fíjese en la imagen \ref{fig:no-antiliasing}, en la cual se notan mucho los bordes entre las casillas negras y blancas, de forma que si ampliamos la imagen se vería muy pixelada.
+
+\begin{figure} [ht]
+    \centering
+    \includegraphics[scale = 0.5]{img/C7/no-antiliasing.png}
+    \caption{Suelo antes de aplicar antiliasing}
+    \label{fig:no-antiliasing}
+\end{figure}
+
+Para corregir este efecto, debemos tener en cuenta que al dividir el plano de proyección en píxeles lanzamos un único rayo por píxel, pero por la región del plano que corresponde puede pasar una recta diagonal como las de la imagen \ref{fig:no-antiliasing}, lo cual puede derivar en que un píxel se dibuje totalmente negro cuando realmente no lo es. De hecho podría ocurrir que en su mayoría el píxel fuera blanco pero justo el rayo se lanza hacia un punto que se evalúa como negro, en cuyo caso el píxel se colorearía negro. Fijémonos en la figura \ref{fig:pantalla-antiliasing} (a), en la cual representamos una pantalla de $5\times 3$ píxeles y cada punto señalado sería un punto del plano de proyección hacia el cual se lanzaría un rayo según las técnicas implementadas hasta el momento. Una forma sencilla de solucionar este impedimento es aplicar la técnica popularmente conocida como \textit{Multisampling Antiliasing} (MSAA). El MSAA consiste en lanzar más de un rayo por píxel, de forma que se cubra una región más representativa del mismo y se promedie el color que devuelve cada rayo en cada uno de los puntos. Para ello, fijamos un número natural $n\in\N$ y programaremos la forma de lanzar $n^2$ rayos en cada píxel, tal y como vemos en la imagen \ref{fig:pantalla-antiliasing} (b) con $n=2$.
+
+\begin{figure}[ht]
+    \centering
+    \begin{tabular}{cc}
+        \includegraphics[scale=0.20]{img/C7/pixeles-sin-antiliasing.png} &
+      \includegraphics[scale=0.20]{img/C7/pixeles-con-antiliasing.png} \\    
+    (a) Sin antiliasing & (b) Con antiliasing  \\
+    \end{tabular}
+    \caption{Representación de los rayos que se lanzan a una pantalla}
+    \label{fig:pantalla-antiliasing}
+\end{figure}
+
+Por tanto, en \verb|main|, cuando obtenemos \verb|u,v| y creamos el rayo, debemos calcular $n^2$ coordenadas. Recordemos, de la sección \ref{section:camara}, \verb|u,v| son las coordenadas de dispositivo normalizadas en $[0,1]$, es decir:
+\begin{lstlisting}
+vec2 uv = (gl_FragCoord.xy + vec2(0.5)) / vec2(image_width, image_height);
+float u = uv.x;
+float v = uv.y;
+\end{lstlisting}
+
+Si ahora en lugar de utilizar un rayo por píxel que se dirige al centro del mismo deseamos lanzar $n^2$ rayos uniformemente distribuidos por el la superficie del píxel, tenemos que dividir su ancho en $n$ intervalos, análogamente el alto. Por tanto, dividimos cada píxel en una cuadrícula $n\times n$ donde cada fragmento mide $h_w:=\frac{1}{image\_width\cdot n}$ en anchura y de $h_h:=\frac{1}{image\_height\cdot n}$ en altura. Tras esto, deberíamos sumar $\frac{1}{2}h_w$ en ancho y $\frac{1}{2}h_h$ en alto, para así tener dicha cuadrícula centrada en el píxel, véase la imagen \ref{fig:MSAA}.
+
+\begin{figure} [ht]
+    \centering
+    \includegraphics[scale = 0.45]{img/C7/MSAA.png}
+    \caption{Construcción de los puntos por el píxel en MSAA}
+    \label{fig:MSAA}
+\end{figure}
+
+Seguidamente, calculamos los $n^2$ colores, uno por cada rayo que lancemos. Por cada rayo que queremos trazar calculamos la coordenada de dispositivo normalizada del punto al cual queremos lanzar el rayo, llamamos a \verb|get_ray|, a \verb|ray_color| y sumamos el valor de retorno de esta última. Finalmente dividimos esta suma entre $n^2$ para calcular el color promedio y este es el que finalmente asignaríamos a \verb|gl_FragColor|.
+
+La forma de hacer este cálculo es iterando un índice $i=0,\dots,n^2$. Para a partir del índice $i$ obtener la coordenada correspondiente podemos dividir el conjunto $\sigma_{n^2}=\{0,1,\dots,n^2-1\}$ en $n$ conjuntos de $n$ elementos cada uno, de forma que
+$$
+\sigma_{n^2} = \bigcup_{k=0}^{n-1} \{nk, nk+1, \dots, nk+n-1\}.
+$$
+
+Cada subconjunto de $\sigma_{n^2}$ representa una fila de puntos del píxel. Por tanto, aplicando la división entera, $i/n$ será la fila e $i\%n$ la columna. Por lo que habría que sumar $(i/n)h_w + \frac{1}{2}h_w$ a la coordenada anchura inicial e $(i\%n)h_h+ \frac{1}{2}h_h$ a la altura para obtener la coordenada a la que lanzar el rayo.
+
+El código por tanto sería el siguiente
+
+\begin{lstlisting}
+// Antiliasing
+
+vec2 uv = (gl_FragCoord.xy) / vec2(image_width, image_height);
+float u = uv.x;
+float v = uv.y;
+
+int nSamples = 3; // O cualquier otro numero
+float hw = 1.0 / (float(image_width * nSamples)),
+      hh = 1.0 / (float(image_height * nSamples));
+Ray r;
+vec4 sum_colors = vec4(0.0, 0.0, 0.0, 1.0);
+
+for(int i = 0; i < ARRAY_TAM; i++) {
+    if(i == nSamples*nSamples) break;
+    int x =  i/nSamples;
+    int y =  i - nSamples*x;
+    u = uv.x + float(x) * hw + 0.5 * hw;
+    v = uv.y + float(y) * hh + 0.5 * hh;
+    r = get_ray(cam, u, v);
+    sum_colors += ray_color(r, world, num_spheres, ground, 
+        lights, num_lights);
+}
+
+gl_FragColor = sum_colors / float(nSamples*nSamples);
+\end{lstlisting}
+
+Con esta modificación y fijando el valor que consideremos en \verb|nSamples| se consiguen resultados como el de la figura \ref{fig:antiliasing}. Como se puede ver, los bordes son más suaves y de mejor calidad
+
+\begin{figure} [ht]
+    \centering
+    \includegraphics[scale = 0.5]{img/C7/antiliasing.png}
+    \caption{Suelo tras de aplicar antiliasing}
+    \label{fig:antiliasing}
+\end{figure}
+
+El principal y mayor inconveniente que presenta esta técnica es que, como se puede imaginar, es $n^2$ veces más costosa que lanzar un único rayo por píxel, por lo que ralentiza muchísimo la ejecución. Sin embargo, si se desea una imagen concreta con parámetros muy claros y no tanto la interacción es una buena herramienta, pues proporciona un nivel de detalle mucho mayor.
+
+Precisamente por este costo, se incluye en el software la posibilidad de decidir si se desea o no aplicar MSAA, y en caso afirmativo, cuántos rayos por píxel se desean trazar. Esto se consigue mediante una variable \verb|uniform| booleana que en caso de valer \verb|true| se ejecutaría el código del antiliasing y en caso contrario se ejecutaría el código normal con un rayo por píxel, cuyo nombre es \verb|u_antiliasing|. Si esta variable es verdadera, se consultaría el valor entero que tenga la variable \verb|uniform| que llamamos \verb|u_nSamples|, que es la análoga a la $n$ que hemos utilizado en las explicaciones. 
+
+\begin{lstlisting}
+    uniform bool u_antiliasing;
+    uniform int u_nSamples;
+// ...
+void main() {
+    // ... 
+    if(u_antiliasing) {
+        // Antiliasing
+        int nSamples = u_nSamples;
+        // ... 
+    }
+    else {
+        // No antiliasing
+        // ...
+    }
+}   
+\end{lstlisting}
+
+Para terminar esta exposición y este capítulo mostraremos una última imagen que resume todo lo desarrollado: Ray-Tracing, intersecciones con distintos cuerpos, posicionamiento de cámara, iluminación, sombras y MSAA.
+
+
+\begin{figure} [ht]
+    \centering
+    \includegraphics[scale = 0.45]{img/C7/imagen-final.png}
     \caption{Imagen final del capítulo \ref{chap:ray-tracing}}
     \label{fig:imagen-final}
 \end{figure}
-
-\begin{comment}
-
-
-Como ejemplos tenemos las imágenes que se han presentado al inicio de esta sección, aunque para terminar esta exposición y este capítulo mostraremos una última imagen que resume todo lo desarrollado: Ray-Tracing, intersecciones con distintos cuerpos, posicionamiento de cámara e iluminación.
-
-
-\end{comment}
-
 
